--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                 <p>Implementation of Apriori Algorithm Data Mining for Increase Sales</p>
                 <a href="https://jurnal.polgan.ac.id/index.php/sinkron/article/view/10587/387" target="_blank" class="btn">View Project</a>
             </div>
+                <div class="project-item">
+                <img src="img/projek2.PNG" alt="Project 3" class="project-image">
+                <h3>Project 3</h3>
+                <p>Case of san_francisco_bikeshare</p>
+                <a href="https://docs.google.com/presentation/d/14pTgbBRrTd-nz7QBfhPg_I9zWhGg1PkZfz1SzWwCKYo/edit?usp=sharing" target="_blank" class="btn">View Project</a>
+            </div>
         </div>
     </section>
 
