--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="education-item">
             <img src="img/logo.png" alt="University Logo" class="education-logo">
             <h3>Bachelor's Degree, Information Systems</h3>
-            <p>Sekolah Tinggi Manajemen Informatika dan Komputer Nusa Mandirin</p>
+            <p>Sekolah Tinggi Manajemen Informatika dan Komputer Nusa Mandiri</p>
             <p>IPK 3.91</p>
         </div>
         <div class="education-item">
@@ -98,6 +98,19 @@
             <h3></h3>
             <p>Hactiv8</p>
             <p>Belajar Langkah Fundamental Untuk Menjadi Programmer</p>
+        </div>
+            <div class="education-item">
+            <img src="img/logo" alt="University Logo" class="education-logo">
+            <h3></h3>
+            <p>Lembaga Sertifikasi STMIK Nusa Mandir</p>
+            <p>Kompetensi Analis Program (Program Analyst)</p>
+        </div>
+            </div>
+            <div class="education-item">
+            <img src="img/logo" alt="University Logo" class="education-logo">
+            <h3></h3>
+            <p>Sekolah Tinggi Manajemen Informatika dan Komputer Nusa Mandiri</p>
+            <p>Workshop Algoritma Klasifikasi dan Klustering untuk analisi data</p>
         </div>
     </section>
 
