--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <section class="skills">
         <h2>Skills</h2>
-        <p>Microsoft Excel, Google Spreadhseet, Google Looker Studio, Google BigQuery</p>
-        <p>Rapidminer, Microsoft Word, Microsoft Power Point, Google Slide, Css</p>
-        <p>Java, Javascript, HTML, PHP, Data Entry</p>
+        <p>Microsoft Excel, Databases, Google Looker Studio, Google BigQuery</p>
+        <p>Rapidminer, Microsoft Word, Microsoft Power Point, Css</p>
+        <p>Java, HTML, PHP, Data Entry, Microsoft Visual Studio Code</p>
         
         <h2>Soft Skills</h2>
         <p>Critical and Analytical Thinking, Problem solving, Active learning, Flexibility</p>
@@ -102,7 +102,7 @@
             <div class="education-item">
             <img src="img/logo" alt="University Logo" class="education-logo">
             <h3></h3>
-            <p>Lembaga Sertifikasi STMIK Nusa Mandir</p>
+            <p>Lembaga Sertifikasi STMIK Nusa Mandiri</p>
             <p>Kompetensi Analis Program (Program Analyst)</p>
         </div>
             </div>
