--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <img src= "img/profile.jpg" alt="Your Name" class="about-photo"> <!-- Add your photo here -->
-        <p>Hello! I'm Reza Alfianzah, Data Analytics Enthusiast have an interest in data processing and analysis.</p>
-        <p>Successful work in a team environment as well as independently, Ability to work under pressure and multi-tasked, Ability to follow instructions and deliver result, Good leadership, skill problems identification and solving skills.</p>
+        <p>Hello! I'm Reza, Web developer and Data Analyst Enthusiast, graduated from Sekolah Tinggi Manajemen Informatika and Komputer (STMIK) Nusa Mandiri Jakarta majoring in information systems.</p>
+        <p>Have internship experience at the Ministry of Manpower of the Republic of Indonesia at the Pelayananan Terpadu Satu Atap (PTSA) Job Market Info as a Job Market Information Admin</p>
+        <p>Proficient and familiar in operating Microsoft Office applications (Word, Excel and Power Point),</p>
+        <p>actively learning the latest programming languages, familiar with operating coding applications such as Microsoft Visual Studio Code</p>
+        <p>I enjoy the process of analyzing data. I am interested in working in Information and Communication Technology.</p>
     </section>
 
     <section class="skills">
@@ -46,7 +49,7 @@
         
         <h2>Soft Skills</h2>
         <p>Critical and Analytical Thinking, Problem solving, Active learning, Flexibility</p>
-        <p>Leadership, Attention to Detail, Ability to work on a team</p>
+        <p>Leadership, Attention to Detail, Ability to work on a team, Communication</p>
     </section>
 
     <section id="projects" class="projects">
