--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero">
         <h1>Reza Alfianzah Portfolio</h1>
         <p>A glimpse of projects I've been working on</p>
-        <a href="javascript:void(0);" class="btn">View My Work</a>
+        <a href="https://drive.google.com/file/d/14a_ioo_-2tdb8tXBT8nSn1WwAuZCTC6f/view" class="btn">View CV</a>
     </section>
 
     <section id="about" class="about">
