--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
             <p>Belajar Langkah Fundamental Untuk Menjadi Programmer</p>
         </div>
             <div class="education-item">
-            <img src="img/logo" alt="University Logo" class="education-logo">
+            <img src="img/logo4.png" alt="University Logo" class="education-logo">
             <h3></h3>
             <p>Lembaga Sertifikasi STMIK Nusa Mandiri</p>
             <p>Kompetensi Analis Program (Program Analyst)</p>
         </div>
             </div>
             <div class="education-item">
-            <img src="img/logo" alt="University Logo" class="education-logo">
+            <img src="img/logo.png" alt="University Logo" class="education-logo">
             <h3></h3>
             <p>Sekolah Tinggi Manajemen Informatika dan Komputer Nusa Mandiri</p>
             <p>Workshop Algoritma Klasifikasi dan Klustering untuk analisi data</p>
