--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <section class="hero">
         <h1>Reza Alfianzah Portfolio</h1>
         <p>A glimpse of projects I've been working on</p>
-        <a href="https://drive.google.com/file/d/14a_ioo_-2tdb8tXBT8nSn1WwAuZCTC6f/view?usp=sharing" class="btn" target="_blank">View CV</a>
+        <a href="https://drive.google.com/file/d/1iphtuiArNWs8NEO_jOsCZtt3G48V18C-/view?usp=sharing" class="btn" target="_blank">View CV</a>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
         <img src= "img/profile.jpg" alt="Your Name" class="about-photo"> <!-- Add your photo here -->
-        <p>Hello! I'm Reza, Web developer and Data Analyst Enthusiast, graduated from Sekolah Tinggi Manajemen Informatika and Komputer (STMIK) Nusa Mandiri Jakarta majoring in information systems.</p>
+        <p>Hello! I'm Reza, Programmer, Web developer and Data Analyst Enthusiast, graduated from Sekolah Tinggi Manajemen Informatika and Komputer (STMIK) Nusa Mandiri Jakarta majoring in information systems.</p>
         <p>Have internship experience at the Ministry of Manpower of the Republic of Indonesia at the Pelayananan Terpadu Satu Atap (PTSA) Job Market Info as a Job Market Information Admin</p>
         <p>Proficient and familiar in operating Microsoft Office applications (Word, Excel and Power Point),</p>
         <p>actively learning the latest programming languages, familiar with operating coding applications such as Microsoft Visual Studio Code</p>
@@ -44,7 +44,7 @@
     <section class="skills">
         <h2>Skills</h2>
         <p>Microsoft Excel, Databases, Google Looker Studio, Google BigQuery</p>
-        <p>Rapidminer, Microsoft Word, Microsoft Power Point, Css</p>
+        <p>Rapidminer, Microsoft Word, Microsoft Power Point, Css, Python</p>
         <p>Java, HTML, PHP, Data Entry, Microsoft Visual Studio Code</p>
         
         <h2>Soft Skills</h2>
