--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero">
         <h1>Reza Alfianzah Portfolio</h1>
         <p>A glimpse of projects I've been working on</p>
-        <a href="https://drive.google.com/file/d/1iphtuiArNWs8NEO_jOsCZtt3G48V18C-/view?usp=sharing" class="btn" target="_blank">View CV</a>
+        <a href="https://drive.google.com/file/d/17UqIrXRyXhzLQTLY26-qkSpin6F3K2Aq/view?usp=sharing" class="btn" target="_blank">View CV</a>
     </section>
 
     <section id="about" class="about">
@@ -113,7 +113,7 @@
             <img src="img/logo.png" alt="University Logo" class="education-logo">
             <h3></h3>
             <p>Sekolah Tinggi Manajemen Informatika dan Komputer Nusa Mandiri</p>
-            <p>Workshop Algoritma Klasifikasi dan Klustering untuk analisi data</p>
+            <p>Workshop Algoritma Klasifikasi dan Klustering untuk analisis data</p>
         </div>
     </section>
 
