--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                 <p>Case of san_francisco_bikeshare</p>
                 <a href="https://docs.google.com/presentation/d/14pTgbBRrTd-nz7QBfhPg_I9zWhGg1PkZfz1SzWwCKYo/edit?usp=sharing" target="_blank" class="btn">View Project</a>
             </div>
+            <div class="project-item">
+                <img src="img/projek3.PNG" alt="Project 4" class="project-image">
+                <h3>Project 4</h3>
+                <p>project aplikasi perpustakaan berbasis web dengan menggunakan CodeIgniter</p>
+                <a href="https://docs.google.com/presentation/d/1ckjFMYR92M7ogfFHs2_pWeLYVutDYpBBbZ6n76fYQnA/edit?usp=sharing" target="_blank" class="btn">View Project</a>
+            </div>
         </div>
     </section>
 
