--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
                 <p>project aplikasi perpustakaan berbasis web dengan menggunakan CodeIgniter</p>
                 <a href="https://docs.google.com/presentation/d/1ckjFMYR92M7ogfFHs2_pWeLYVutDYpBBbZ6n76fYQnA/edit?usp=sharing" target="_blank" class="btn">View Project</a>
             </div>
+                <div class="project-item">
+                <img src="img/projek4.PNG" alt="Project 4" class="project-image">
+                <h3>Project 5</h3>
+                <p>Simple Kalkulator Using HTML</p>
+                <a href="https://github.com/Alfianzah/kalkulator.git" target="_blank" class="btn">View Project</a>
+            </div>
+                            <div class="project-item">
+                <img src="img/projek4.PNG" alt="Project 4" class="project-image">
+                <h3>Project 6</h3>
+                <p>TicTacToe Game Using HTML</p>
+                <a href="https://github.com/Alfianzah/kalkulator.git" target="_blank" class="btn">View Project</a>
+            </div>
         </div>
     </section>
 
