--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                 <a href="https://github.com/Alfianzah/kalkulator.git" target="_blank" class="btn">View Project</a>
             </div>
                             <div class="project-item">
-                <img src="img/projek4.PNG" alt="Project 4" class="project-image">
+                <img src="img/projek5.PNG" alt="Project 5" class="project-image">
                 <h3>Project 6</h3>
                 <p>TicTacToe Game Using HTML</p>
-                <a href="https://github.com/Alfianzah/kalkulator.git" target="_blank" class="btn">View Project</a>
+                <a href="https://github.com/Alfianzah/TicTacToe.git" target="_blank" class="btn">View Project</a>
             </div>
         </div>
     </section>
