--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero">
         <h1>Reza Alfianzah Portfolio</h1>
         <p>A glimpse of projects I've been working on</p>
-        <a href="https://drive.google.com/file/d/17UqIrXRyXhzLQTLY26-qkSpin6F3K2Aq/view?usp=sharing" class="btn" target="_blank">View CV</a>
+        <a href="https://drive.google.com/file/d/1WveiKNgB0fn1OxUx4LIzdwuZIB5S3aiO/view?usp=sharing" class="btn" target="_blank">View CV</a>
     </section>
 
     <section id="about" class="about">
@@ -36,20 +36,20 @@
         <img src= "img/profile.jpg" alt="Your Name" class="about-photo"> <!-- Add your photo here -->
         <p>Hello! I'm Reza, Programmer, Web developer and Data Analyst Enthusiast, graduated from Sekolah Tinggi Manajemen Informatika and Komputer (STMIK) Nusa Mandiri Jakarta majoring in information systems.</p>
         <p>Have internship experience at the Ministry of Manpower of the Republic of Indonesia at the Pelayananan Terpadu Satu Atap (PTSA) Job Market Info as a Job Market Information Admin</p>
-        <p>Proficient and familiar in operating Microsoft Office applications (Word, Excel and Power Point),</p>
-        <p>actively learning the latest programming languages, familiar with operating coding applications such as Microsoft Visual Studio Code</p>
+        <p>Proficient and familiar in operating Microsoft Office applications,</p>
+        <p>actively learning the latest programming languages, familiar with operating coding applications such as Visual Studio Code</p>
         <p>I enjoy the process of analyzing data. I am interested in working in Information and Communication Technology.</p>
     </section>
 
     <section class="skills">
         <h2>Skills</h2>
-        <p>Microsoft Excel, Databases, Google Looker Studio, Google BigQuery</p>
-        <p>Rapidminer, Microsoft Word, Microsoft Power Point, Css, Python</p>
-        <p>Java, HTML, PHP, Data Entry, Microsoft Visual Studio Code</p>
+        <p>Microsoft Excel, ,MySql, Google Looker Studio, Google BigQuery</p>
+        <p>Rapidminer, Microsoft Word, Microsoft Power Point, Css, Spreadsheet</p>
+        <p>Java, HTML, PHP, Data Entry, Visual Studio Code, microsoft Visio</p>
         
         <h2>Soft Skills</h2>
-        <p>Critical and Analytical Thinking, Problem solving, Active learning, Flexibility</p>
-        <p>Leadership, Attention to Detail, Ability to work on a team, Communication</p>
+        <p>Critical and Analytical Thinking, Problem solving, Communication</p>
+        <p>Leadership, Attention to Detail, Ability to work on a team </p>
     </section>
 
     <section id="projects" class="projects">
