--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Reza Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
 </head>
@@ -28,25 +28,24 @@
     <section class="hero">
         <h1>Reza Alfianzah Portfolio</h1>
         <p>A glimpse of projects I've been working on</p>
-        <a href="https://drive.google.com/file/d/1WveiKNgB0fn1OxUx4LIzdwuZIB5S3aiO/view?usp=sharing" class="btn" target="_blank">View CV</a>
+        <br>
+        <a href="https://drive.google.com/file/d/1TCQaUzA05o2pJFS0wy2Oe1Xo09dH_jEb/view?usp=sharing" class="btn" target="_blank">View CV</a>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
         <img src= "img/profile.jpg" alt="Your Name" class="about-photo"> <!-- Add your photo here -->
-        <p>Hello! I'm Reza, Programmer, Web developer and Data Analyst Enthusiast, graduated from Sekolah Tinggi Manajemen Informatika and Komputer (STMIK) Nusa Mandiri Jakarta majoring in information systems.</p>
-        <p>Have internship experience at the Ministry of Manpower of the Republic of Indonesia at the Pelayananan Terpadu Satu Atap (PTSA) Job Market Info as a Job Market Information Admin</p>
-        <p>Proficient and familiar in operating Microsoft Office applications,</p>
-        <p>actively learning the latest programming languages, familiar with operating coding applications such as Visual Studio Code</p>
-        <p>I enjoy the process of analyzing data. I am interested in working in Information and Communication Technology.</p>
+        <p>I am Reza, Software Engineering Enthusiast and Data Analyst Enthusiast, graduate of the Bachelor of Computers at the Nusa Mandiri Jakarta College of Information and Computer Management. Has internship experience at the Ministry of Manpower of the Republic of Indonesia at Pelayanan Terpadu Satu Atap (PTSA) for Job Market Information as a Job Market Information Admin.
+            Proficient and accustomed to operating Microsoft Office applications, mastering various data analysis tools, programming languages, able to create flowcharts using Microsoft Visio and have a high interest in the field of Information and Communication Technology.</p>
     </section>
 
     <section class="skills">
         <h2>Skills</h2>
-        <p>Microsoft Excel, ,MySql, Google Looker Studio, Google BigQuery</p>
-        <p>Rapidminer, Microsoft Word, Microsoft Power Point, Css, Spreadsheet</p>
-        <p>Java, HTML, PHP, Data Entry, Visual Studio Code, microsoft Visio</p>
-        
+        <p>Programming : PHP, HTML, SQL, Java, Javascript</p>
+        <p>Data Analyst : Google BigQuery, Rapidminer, Google Looker Studio, Spreadsheet, Excel</p>
+        <p>Database  : MySQL</p>
+        <p>Devices : Visual Studio Code, Microsoft Office(Microsoft Word, Microsoft Excel, Microsoft Visio, Microsoft Power Point</p>
+        <br>
         <h2>Soft Skills</h2>
         <p>Critical and Analytical Thinking, Problem solving, Communication</p>
         <p>Leadership, Attention to Detail, Ability to work on a team </p>
@@ -58,39 +57,45 @@
             <div class="project-item">
                 <img src="img/projek.PNG" alt="Project 1" class="project-image">
                 <h3>Project 1</h3>
-                <p>Case of The Look-Ecommerce.</p>
+                <p>Mini project revou fundamental course data analytics Case of The Look-Ecommerce.</p>
+                <br>
                 <a href="https://docs.google.com/presentation/d/1IDb6qGYhk-tyQQ15fu5iK6UTWO-YTwhetxRkqhQ9eGI/edit?usp=sharing" target="_blank" class="btn">View Project</a>
             </div>
             <div class="project-item">
                 <img src="img/projek1.PNG" alt="Project 2" class="project-image">
                 <h3>Project 2</h3>
                 <p>Implementation of Apriori Algorithm Data Mining for Increase Sales</p>
+                <br>
                 <a href="https://jurnal.polgan.ac.id/index.php/sinkron/article/view/10587/387" target="_blank" class="btn">View Project</a>
             </div>
                 <div class="project-item">
                 <img src="img/projek2.PNG" alt="Project 3" class="project-image">
                 <h3>Project 3</h3>
                 <p>Case of san_francisco_bikeshare</p>
+                    <br>
                 <a href="https://docs.google.com/presentation/d/14pTgbBRrTd-nz7QBfhPg_I9zWhGg1PkZfz1SzWwCKYo/edit?usp=sharing" target="_blank" class="btn">View Project</a>
             </div>
             <div class="project-item">
                 <img src="img/projek3.PNG" alt="Project 4" class="project-image">
                 <h3>Project 4</h3>
                 <p>project aplikasi perpustakaan berbasis web dengan menggunakan CodeIgniter</p>
+                <br>
                 <a href="https://docs.google.com/presentation/d/1ckjFMYR92M7ogfFHs2_pWeLYVutDYpBBbZ6n76fYQnA/edit?usp=sharing" target="_blank" class="btn">View Project</a>
-            </div>
-                <div class="project-item">
-                <img src="img/projek4.PNG" alt="Project 4" class="project-image">
-                <h3>Project 5</h3>
-                <p>Simple Kalkulator Using HTML</p>
-                <a href="https://github.com/Alfianzah/kalkulator.git" target="_blank" class="btn">View Project</a>
             </div>
                             <div class="project-item">
                 <img src="img/projek5.PNG" alt="Project 5" class="project-image">
-                <h3>Project 6</h3>
+                <h3>Project 5</h3>
                 <p>TicTacToe Game Using HTML</p>
+                                <br>
                 <a href="https://github.com/Alfianzah/TicTacToe.git" target="_blank" class="btn">View Project</a>
             </div>
+                        <div class="project-item">
+                <img src="img/projek6.PNG" alt="Project 6" class="project-image">
+                <h3>Project 6</h3>
+                <p>Mini project revou fundamental course software engineer landing pages travel agent</p>
+                            <br>
+                <a href="https://revou-fundamental-course.github.io/09-dec-24-rezaalfianzah88/" target="_blank" class="btn">View Project</a>
+            </div
         </div>
     </section>
 
@@ -100,7 +105,7 @@
             <img src="img/logo.png" alt="University Logo" class="education-logo">
             <h3>Bachelor's Degree, Information Systems</h3>
             <p>Sekolah Tinggi Manajemen Informatika dan Komputer Nusa Mandiri</p>
-            <p>IPK 3.91</p>
+            <p>GPM 3.91/4.00</p>
         </div>
         <div class="education-item">
             <img src="img/logo2.png" alt="University Logo" class="education-logo">
