--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="project-item">
                 <img src="img/projek3.PNG" alt="Project 4" class="project-image">
                 <h3>Project 4</h3>
-                <p>project aplikasi perpustakaan berbasis web dengan menggunakan CodeIgniter</p>
+                <p>Building a web-based library management system using CodeIgniter framework.</p>
                 <br>
                 <a href="https://docs.google.com/presentation/d/1ckjFMYR92M7ogfFHs2_pWeLYVutDYpBBbZ6n76fYQnA/edit?usp=sharing" target="_blank" class="btn">View Project</a>
             </div>
