--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+        <p>&copy; 2024 Reza Alfianzah. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
