--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h3>Project 5</h3>
                 <p>TicTacToe Game Using HTML</p>
                                 <br>
-                <a href="https://github.com/Alfianzah/TicTacToe.git" target="_blank" class="btn">View Project</a>
+                <a href="https://rezaalfianzah888.github.io/tictactoe.github.io/" class="btn">View Project</a>
             </div>
                         <div class="project-item">
                 <img src="img/projek6.PNG" alt="Project 6" class="project-image">
@@ -122,7 +122,7 @@
         <div class="education-item">
             <img src="img/logo3.png" alt="University Logo" class="education-logo">
             <h3></h3>
-            <p>Hactiv8</p>
+            <p>Hacktiv8</p>
             <p>Belajar Langkah Fundamental Untuk Menjadi Programmer</p>
         </div>
             <div class="education-item">
