--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
                             <br>
                 <a href="https://revou-fundamental-course.github.io/09-dec-24-rezaalfianzah88/" target="_blank" class="btn">View Project</a>
             </div
-                                        <div class="project-item">
+            <div class="project-item">
                 <img src="img/projek7.PNG" alt="Project 7" class="project-image">
-                <h3>Project 7</h3>
-                <p>Mini Project Kalkulator Suhu Celcius Ke Fahrenheit dengan menggunakan Html, Css dan</p>
-                            <br>
+                <h3>Project 1</h3>
+                <p>Mini Project Kalkulator Suhu dengan menggunakan Html, Css dan Js</p>
+                <br>
                 <a href="https://ollivereza.github.io/kalkulatorsuhu.io/" target="_blank" class="btn">View Project</a>
-            </div
-                                                        <div class="project-item">
+            </div>
+            <div class="project-item">
                 <img src="img/projek8.PNG" alt="Project 8" class="project-image">
                 <h3>Project 8</h3>
-                <p>Mini Project Kalkulator BMI dengan menggunakan Html, Css dan</p>
-                            <br>
-                <a href="https://alfianzahreza94.github.io/kalkulatorbmi.io/" target="_blank" class="btn">View Project</a>
-            </div
+                <p>Mini Project Kalkulator BMI dengan menggunakan Html, Css dan Js</p>
+                <br>
+                <a href="https://docs.google.com/presentation/d/1IDb6qGYhk-tyQQ15fu5iK6UTWO-YTwhetxRkqhQ9eGI/edit?usp=sharing" target="_blank" class="btn">View Project</a>
+            </div>
         </div>
     </section>
 
