--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 <a href="https://revou-fundamental-course.github.io/09-dec-24-rezaalfianzah88/" target="_blank" class="btn">View Project</a>
             </div
             <div class="project-item">
-                <img src="img/projek7.PNG" alt="Project 7" class="project-image">
-                <h3>Project 1</h3>
+                <img src="" alt="Project 7" class="project-image">
+                <h3>Project 7</h3>
                 <p>Mini Project Kalkulator Suhu dengan menggunakan Html, Css dan Js</p>
                 <br>
                 <a href="https://ollivereza.github.io/kalkulatorsuhu.io/" target="_blank" class="btn">View Project</a>
             </div>
             <div class="project-item">
-                <img src="img/projek8.PNG" alt="Project 8" class="project-image">
+                <img src="" alt="Project 8" class="project-image">
                 <h3>Project 8</h3>
                 <p>Mini Project Kalkulator BMI dengan menggunakan Html, Css dan Js</p>
                 <br>
