--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
                 <a href="https://revou-fundamental-course.github.io/09-dec-24-rezaalfianzah88/" target="_blank" class="btn">View Project</a>
                         </div>
             <div class="project-item">
-                <img src="" alt="Project 7" class="project-image">
+                <img src="img/projek7.PNG" alt="Project 7" class="project-image">
                 <h3>Project 7</h3>
                 <p>Mini Project Kalkulator Suhu dengan menggunakan Html, Css dan Js</p>
                 <br>
                 <a href="https://ollivereza.github.io/kalkulatorsuhu.io/" target="_blank" class="btn">View Project</a>
             </div>
             <div class="project-item">
-                <img src="" alt="Project 8" class="project-image">
+                <img src="img/projek8.PNG" alt="Project 8" class="project-image">
                 <h3>Project 8</h3>
                 <p>Mini Project Kalkulator BMI dengan menggunakan Html, Css dan Js</p>
                 <br>
-                <a href="https://docs.google.com/presentation/d/1IDb6qGYhk-tyQQ15fu5iK6UTWO-YTwhetxRkqhQ9eGI/edit?usp=sharing" target="_blank" class="btn">View Project</a>
+                <a href="https://alfianzahreza94.github.io/kalkulatorbmi.io/" target="_blank" class="btn">View Project</a>
             </div>
         </div>
     </section>
