--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Reza Alfianzah Portfolio</h1>
         <p>A glimpse of projects I've been working on</p>
         <br>
-        <a href="https://drive.google.com/file/d/15JEA6HCln3F1m9y7fxH5XuTRFAiyQC-x/view?usp=sharing" class="btn" target="_blank">View CV</a>
+        <a href="https://drive.google.com/file/d/1UfS6XkJz0OWR9AKL9YNvvYgewjG_pIYd/view?usp=sharing" class="btn" target="_blank">View CV</a>
     </section>
 
     <section id="about" class="about">
@@ -82,14 +82,14 @@
                 <br>
                 <a href="https://docs.google.com/presentation/d/1ckjFMYR92M7ogfFHs2_pWeLYVutDYpBBbZ6n76fYQnA/edit?usp=sharing" target="_blank" class="btn">View Project</a>
             </div>
-                            <div class="project-item">
+            <div class="project-item">
                 <img src="img/projek5.PNG" alt="Project 5" class="project-image">
                 <h3>Project 5</h3>
                 <p>TicTacToe Game Using HTML</p>
                                 <br>
                 <a href="https://rezaalfianzah888.github.io/tictactoe.github.io/" class="btn">View Project</a>
             </div>
-                        <div class="project-item">
+            <div class="project-item">
                 <img src="img/projek6.PNG" alt="Project 6" class="project-image">
                 <h3>Project 6</h3>
                 <p>Mini project revou fundamental course software engineer landing pages travel agent</p>
@@ -120,6 +120,13 @@
             <h3>Bachelor's Degree, Information Systems</h3>
             <p>Sekolah Tinggi Manajemen Informatika dan Komputer Nusa Mandiri</p>
             <p>GPM 3.91/4.00</p>
+        </div>
+        </div>
+            <div class="education-item">
+            <img src="img/logo2.png" alt="University Logo" class="education-logo">
+            <h3></h3>
+            <p>RevoU</p>
+            <p>RevoU Mini Course Digital Marketing</p>
         </div>
         <div class="education-item">
             <img src="img/logo2.png" alt="University Logo" class="education-logo">
