--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <h1>Reza Alfianzah Portfolio</h1>
         <p>A glimpse of projects I've been working on</p>
         <br>
-        <a href="https://drive.google.com/file/d/1UfS6XkJz0OWR9AKL9YNvvYgewjG_pIYd/view?usp=sharing" class="btn" target="_blank">View CV</a>
+        <a href="https://drive.google.com/file/d/1d0KutWBXidIFI7HGiAOkQIS0Y-sW9tAx/view?usp=sharing" class="btn" target="_blank">View ATS CV</a>
+        <br>
+        <a href="https://drive.google.com/file/d/173LUBty7t60kY29bmC1-_NNXGCKq8V_8/view?usp=sharing" class="btn" target="_blank">View Creative CV</a>
     </section>
 
     <section id="about" class="about">
