--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reza Portfolio</title>
+    <title>Reza's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">Reza</div>
+            <div class="logo">PORTFOLIO</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -30,7 +30,7 @@
         <p>A glimpse of projects I've been working on</p>
         <br>
         <a href="https://drive.google.com/file/d/1d0KutWBXidIFI7HGiAOkQIS0Y-sW9tAx/view?usp=sharing" class="btn" target="_blank">View ATS CV</a>
-        <br>
+        
         <a href="https://drive.google.com/file/d/173LUBty7t60kY29bmC1-_NNXGCKq8V_8/view?usp=sharing" class="btn" target="_blank">View Creative CV</a>
     </section>
 
